[package]
name = "bevy_march"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SDF ray marching for bevy"
keywords = ["bevy", "gamedev", "graphics"]

[profile.dev]
opt-level = 1
lto = "off"
debug-assertions = true

[profile.dev.package."*"]
opt-level = 3
debug-assertions = true

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[dependencies]
bevy = {version = "0.14.0", default-features = false, features = [
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_render",
  # TODO: Don't
  "bevy_gizmos",
]}
bevy_prototype_sdf = { git = "https://github.com/NiseVoid/bevy_prototype_sdf", default-features=false, features = ["bevy_asset", "shader"]}
ploc-bvh = "0.2"

[dev-dependencies]
bevy = {version = "0.14.0", default-features = false, features = [
  "multi_threaded",
  "wayland",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_winit",
  "tonemapping_luts",
  "file_watcher",
  "embedded_watcher",
  "bevy_sprite",
  "bevy_text",
  "default_font",
  "ktx2",
  "zstd",
]}

[patch.crates-io]
ploc-bvh = { git = "https://github.com/NiseVoid/ploc-bvh" }
