[package]
name = "bevy_march"
description = "SDF ray marching for bevy"
repository = "https://github.com/NiseVoid/bevy_march"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "graphics"]
version = "0.2.0"

edition = "2024"

[lints.rust]
# missing_docs = "warn"
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

[profile.dev]
opt-level = 1
lto = "off"
debug-assertions = true

[profile.dev.package."*"]
opt-level = 3
debug-assertions = true

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[dependencies]
bevy = {version = "0.18.0", default-features = false, features = [
  "bevy_log",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_window",
  "bevy_light",
]}
bevy_prototype_sdf = {version="0.1", default-features=false, features = ["bevy_asset", "shader"]}
obvhs = "0.3.0"

[dev-dependencies]
bevy = {version = "0.18.0", default-features = false, features = [
  "std",
  "multi_threaded",
  "wayland",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_light",
  "bevy_render",
  "bevy_post_process",
  "bevy_winit",
  "tonemapping_luts",
  "file_watcher",
  "embedded_watcher",
  "bevy_sprite",
  "bevy_sprite_render",
  "bevy_text",
  "default_font",
  "ktx2",
  "zstd_rust",
]}

[patch.crates-io]
bevy_prototype_sdf = {git = "https://github.com/NiseVoid/bevy_prototype_sdf", rev = "c23bc75"}

[[example]]
name = "features"
required-features = ["bevy/bevy_pbr"]
